--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "main": "main.js",
   "version": "0.0.1",
+  "type": "module",
   "scripts": {
     "start": "electron .",
     "build": "electron-packager . --overwrite --icon=logo/logo.ico"
