--- a/package.json
+++ b/package.json
@@ -4,19 +4,17 @@
   "author": "Tim Harding",
   "private": true,
   "main": "main.js",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . --overwrite --icon=logo/logo.ico",
-    "package": "electron-installer-dmg --overwrite fuzz-darwin-x64/fuzz.app Fuzz"
+    "build": "node build.js"
   },
   "license": "CC0-1.0",
   "devDependencies": {
+    "electron": "^4.1.1",
     "electron-packager": "^13.1.1",
+    "electron-wix-msi": "^2.1.1",
     "electron-installer-dmg": "^3.0.0"
-  },
-  "dependencies": {
-    "electron": "^4.1.1"
   }
 }
